--- a/Onboarding/templates/contacts.html
+++ b/Onboarding/templates/contacts.html
@@ -120,7 +120,7 @@
         </section>
         <!-- End of Welcome Banner -->
 
-         <div id="contacts" class="px-5 grid gap-8 grid-cols-1 md:grid-cols-2 py-24 mx-auto bg-white text-gray-500 rounded-lg">
+         <div id="contacts" class="px-5 grid gap-8 grid-cols-1 md:grid-cols-2  pb-24 mx-auto bg-white text-gray-500 rounded-lg">
     <div class="flex flex-col justify-center" data-aos="fade-up"  data-aos-once="true">
         <div>
             <h2 class="text-4xl text-blue-500 lg:text-5xl font-bold leading-tight">
