--- a/Onboarding/templates/index.html
+++ b/Onboarding/templates/index.html
@@ -130,7 +130,7 @@
                         life’s most challenging problems. Everyone has hurdles to overcome, and we’d 
                         love to help you along the way.
                         </P>
-                    <button class="bg-blue-500 p-4 mt-8 w-[200px] text-white text-xs font-sans uppercase font-bold  cursor-pointer">Our Services</button>
+                    <a href="{% url 'Onboarding:services' %}"><button class="bg-blue-500 p-4 mt-8 w-[200px] text-white text-xs font-sans uppercase font-bold  cursor-pointer">Our Services</button></a>
                 </div>
                 <div class="about-2 pt-8 p-5 pb-4" data-aos="fade-up"  data-aos-once="true">
                     <p class="text-gray-500 font-sans  text-[18px] w-[100%] text-left">
