--- a/Onboarding/templates/services.html
+++ b/Onboarding/templates/services.html
@@ -128,10 +128,13 @@
           <div class="mx-auto max-w-2xl lg:text-center lg:pl-[0px] pl-5 lg:pr-[0px] pr-2 md:mb-8 " >
             <h2 class="text-base  font-semibold leading-7 uppercase text-green-500">Our Services</h2>
             <p class="mt-2 text-3xl font-bold tracking-tight uppercase text-blue-500 sm:text-4xl">what we do here</p>
-            <p class="mt-6 text-lg leading-8 text-gray-600">Open Hand Healthcare services , you have the advantage and
-                convenience of receiving the best level of care at competitive pricings. Some of our
-                supreme services consist of but are not limited to the following: chore services,
-                companionship services, personal care services.</p>
+            <p class="mt-6 text-lg leading-8 text-gray-600">Here at Meaningful Minds Therapeutic Services, LLC, we realize that no two 
+              people are the same, and we tailor our services to meet specific needs for 
+              individuals, family or groups. We love helping people understand the things 
+              that are holding them back and/or down with an in-depth approach. After 
+              recognizing underlying factors, clients can fully realize their strengths and 
+              adjust certain behaviors and thoughts to see things in a different, healthier 
+              way.</p>
           </div>
          </div>
             <div class="features-items pt-5 container mx-auto">
