--- a/Onboarding/templates/services.html
+++ b/Onboarding/templates/services.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our Services | Meaningful Mind Therapy Services</title>
+    <title>Our Services | Meaningful Mind Therapeutics Services</title>
     <link rel="stylesheet" href="{% static 'css/about.css' %}?v=7">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
