--- a/Onboarding/templates/about.html
+++ b/Onboarding/templates/about.html
@@ -121,36 +121,36 @@
         <!-- End of Welcome Banner -->
 
         <!-- About Section -->
-        <section id="About" class="mt-0" style="background-color: rgba(255, 255, 255, 0.932);" >
-            <div class="about mx-auto container flex lg:flex-row flex-col md:justify-center lg:justify-evenly  p-5 lg:p-2 xl:p-20">
+      <section id="About" class="lg:mt-10 mt-0" >
+            <div class="about mx-auto container flex lg:flex-row flex-col bg-blue-200 md:justify-center lg:justify-evenly  xl:p-20">
                 <div class="about-1 p-5" data-aos="fade-up"  data-aos-once="true">
-                    <h1 class="text-green-500 text-2xs  pb-1 font-extrabold ">ABOUT US</h1>
                     <h2 class="uppercase font-bold text-5xl text-blue-500 font-sans tracking-tight pb-5">Our Mission</h2>
-                    <P class="lg:w-[500px] w-[100%] font-sans text-gray-900" style="letter-spacing: .1rem; word-spacing: .1rem;" >Meaningful Minds Therapeutic Services is a change agent dedicated to improving 
+                    <P class="lg:w-[500px] w-[100%] font-sans text-gray-900 text-xl" style="letter-spacing: .1rem; word-spacing: .1rem;" >Meaningful Minds Therapeutic Services is a change agent dedicated to improving 
                         the lives and social conditions for people with mental health, substance use 
                         and trauma-related challenges, by promoting health, wellness and recovery in a 
                         meaningful way.<br> <br>  </P>
-                   <a href="{% url 'Onboarding:contacts' %}"> <button class="bg-green-500 hover:bg-blue-500 p-4 mt-8 w-[250px] text-white text-xs font-sans uppercase font-bold  cursor-pointer">Book An Appointment</button></a>
+                   <a href="{% url 'Onboarding:contacts' %}"> <button class="bg-red-500 hover:bg-green-500 p-4 mt-8 w-[250px] text-white text-2xs font-sans uppercase font-bold  cursor-pointer">Book An Appointment</button></a>
                 </div>
-                <div class="about-2 p-5 mt-12" data-aos="fade-up"  data-aos-once="true">
+                <div class="about-2 p-5 mt-1" data-aos="fade-up"  data-aos-once="true">
                     <img class="md:w-[850px] w-full rounded-[50px]" src="{% static 'images/9953.jpg' %}" alt="">
             </div>
+          </div>
+            <div class="about mx-auto container flex md:flex-row-reverse flex-col md:justify-center lg:justify-evenly  p-5 lg:p-2 ">
+              <div class="about-1 p-5" data-aos="fade-up"  data-aos-once="true">
+                  <h2 class="uppercase font-bold md:text-5xl lg:text-5xl text-5xl text-blue-500 font-sans tracking-tight pb-5 mt-12">Our Story</h2>
+                  <P class="md:w-[300px] lg:w-[700px]  w-[100%] font-sans text-gray-900" style="letter-spacing: .1rem; word-spacing: .1rem;" >Our practice specializes in helping people who are struggling with addiction, social and life skills, or behavior management. If you are trying to navigate these areas of life, we’re confident that we have the experience to help you rediscover what brings happiness to your life. Through therapy, there is always a way to address the issues you face and learn coping strategies to help you both right now and in the future. Through therapy, we can get you on track to leading a happier, more fulfilling life by equipping you with the tools you need to more efficiently and confidently manage life’s challenges. It is never too late to start living the life you’ve always wanted. If you’re interested in becoming a better, happier, more fulfilled you, get started by reaching out today!<br> <br></P>
+                  <h1 class="text-black text-2xs  pb-1 ">- Jahneen Keatz Onyemachi , FOUNDER / CEO</h1>
+                  
+              </div>
+              <div class="about-2 p-5 mt-5" data-aos="fade-up"  data-aos-once="true">
+                  <img class="lg:w-[250px]  md:w-[300px] rounded-[50px]" src="{% static 'images/f9d82190-a037-11ed-85e3-8bd5b2b54d4f.jpg' %}" alt="">
+          </div>
+           </div>
+
 
         </section>
 
-        <section id="About" style="background-color: rgba(255, 255, 255, 0.932);" >
-            <div class="about mx-auto container flex md:flex-row-reverse flex-col md:justify-center lg:justify-evenly  p-5 lg:p-2 xl:p-20">
-                <div class="about-1 p-5" data-aos="fade-up"  data-aos-once="true">
-                    <h1 class="text-green-500 text-2xs  pb-1 font-extrabold ">FOUNDER / CEO</h1>
-                    <h2 class="uppercase font-bold md:text-5xl lg:text-5xl text-5xl text-blue-500 font-sans tracking-tight pb-5">Our Story</h2>
-                    <P class="md:w-[300px] lg:w-[500px]  w-[100%] font-sans text-gray-900" style="letter-spacing: .1rem; word-spacing: .1rem;" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, illo consectetur? Cumque in dolorum, voluptatum omnis eveniet voluptatem numquam laudantium eaque, architecto placeat quo praesentium rem quibusdam temporibus quaerat. Porro, deserunt suscipit at adipisci fugiat, nostrum culpa assumenda quos harum obcaecati quia natus eaque tempore quasi iste totam sint libero.<br> <br>  </P>
-                    <button class="bg-green-500 hover:bg-blue-500 p-4 mt-8 w-[250px] text-white text-xs font-sans uppercase font-bold  cursor-pointer">Learn More</button>
-                </div>
-                <div class="about-2 p-5 mt-5" data-aos="fade-up"  data-aos-once="true">
-                    <img class="lg:w-[250px]  md:w-[300px] rounded-[50px]" src="{% static 'images/f9d82190-a037-11ed-85e3-8bd5b2b54d4f.jpg' %}" alt="">
-            </div>
-
-        </section>
+       
         <!-- End of About Section -->
 
       
