--- a/Onboarding/templates/services.html
+++ b/Onboarding/templates/services.html
@@ -138,16 +138,16 @@
           </div>
          </div>
             <div class="features-items pt-5 container mx-auto">
-              <div data-aos="fade-up"  data-aos-once="true" class="feature-item pt-6 md:pt-0  px-10 md:px-16 lg:px-28 flex md:flex-row flex-col justify-center items-center align-middle">
+              <div data-aos="fade-up"  data-aos-once="true" class="feature-item  md:pt-0  px-10 md:px-16 lg:px-28 flex bg-green-700 md:flex-row flex-col justify-center items-center py-10 align-middle">
                 <div class="feature-item-text md:text-left sm:mr-[10px]  text-center md:w-[750px]">
                   <h1 class=" text-green-500 mb-1 font-bold lg:text-3xl md:text-2xl text-2xl">
                     Psychiatric Rehabilitation Program (PRP)</h1>
-                  <p class="text-gray-500   text-[15px] md:text-[15px] lg:text-[18px] ">PRP services are provided through individual counseling and group activities. Recovery groups focus on helping members learn essential life skills for independent living and fulfilling meaningful life roles.
+                  <p class="text-white   text-[15px] md:text-[15px] lg:text-[18px] ">PRP services are provided through individual counseling and group activities. Recovery groups focus on helping members learn essential life skills for independent living and fulfilling meaningful life roles.
 
                     Rehabilitation counselors provide community outreach services to assist members living in the larger community.</p>
                 </div>
-                <div class="feature-item-img mt-3 md:mt-[0px]">
-                    <img class="w-[500px] rounded-[20px]" src="{% static 'images/18593.jpg' %}" alt="">
+                <div class="feature-item-img mt-8">
+                    <img class="w-[500px] mt-8 rounded-[20px]" src="{% static 'images/18593.jpg' %}" alt="">
                 </div>
               </div>
               <div data-aos="fade-up"  data-aos-once="true" class="feature-item  md:pt-0  px-10 md:px-16 lg:px-28 flex md:flex-row-reverse flex-col justify-center items-center align-middle mt-12">
@@ -160,22 +160,22 @@
                     <img class="w-[500px] rounded-[20px]" src="{% static 'images/18366.jpg' %}" alt="">
                 </div>
               </div>
-              <div data-aos="fade-up"  data-aos-once="true" class="feature-item  md:pt-0  px-10 md:px-16 lg:px-28 flex md:flex-row flex-col justify-center items-center align-middle mt-12">
+              <div data-aos="fade-up"  data-aos-once="true" class="feature-item    px-10 md:px-16 lg:px-28 flex md:flex-row flex-col justify-center items-center align-middle mt-8 py-[72px] bg-green-700">
                 <div class="feature-item-text md:text-left sm:mr-[10px]  text-center md:w-[750px]">
                   <h1 class="pb-1 text-green-500 font-bold lg:text-3xl md:text-2xl text-2xl">
                     Outpatient Program (OP)</h1>
-                  <p class="text-gray-500   text-[15px] md:text-[15px] lg:text-[18px] ">Outpatient therapy (also known as OP) is the least intensive program we offer.  The outpatient treatment program provides regularly scheduled individual and group counseling. The program includes education on mental health issues, recovery and wellness. These comprehensive, coordinated, and defined services vary in the level of intensity dependent on the individual needs of the client seeking services. The outpatient program addresses a variety of needs, including, but not limited to, situational stressors, family relations, interpersonal relations, mental health issues, life span issues, psychiatric illnesses, addictions, and other traumas.</p>
+                  <p class="text-white   text-[15px] md:text-[15px] lg:text-[18px] ">Outpatient therapy (also known as OP) is the least intensive program we offer.  The outpatient treatment program provides regularly scheduled individual and group counseling. The program includes education on mental health issues, recovery and wellness. These comprehensive, coordinated, and defined services vary in the level of intensity dependent on the individual needs of the client seeking services. The outpatient program addresses a variety of needs, including, but not limited to, situational stressors, family relations, interpersonal relations, mental health issues, life span issues, psychiatric illnesses, addictions, and other traumas.</p>
                 </div>
-                <div class="feature-item-img mt-3 md:mt-[0px]">
-                    <img class="w-[500px] rounded-[20px]" src="{% static 'images/18506.jpg' %}" alt="">
+                <div class="feature-item-img">
+                    <img class="w-[500px] mt-8 rounded-[20px]" src="{% static 'images/18506.jpg' %}" alt="">
                 </div>
               </div>
-              <div data-aos="fade-up"  data-aos-once="true" class="feature-item  md:pt-0  px-10 md:px-16 lg:px-28 flex md:flex-row-reverse flex-col justify-center items-center align-middle mt-12">
+              <div data-aos="fade-up"  data-aos-once="true" class="feature-item  md:pt-0  px-10 md:px-16 lg:px-28 flex md:flex-row-reverse flex-col justify-center items-center align-middle mt-12 pb-10">
                 <div class="feature-item-text md:text-left text-center sm:ml-[20px]  md:w-[750px]">
                   <h1 class=" text-green-500 mb-1  font-bold lg:text-3xl md:text-2xl text-2xl">
                     
           Partial Hospitalization Program (PHP)</h1>
-                  <p class="text-gray-500 pb-5 text-[15px]  md:text-[15px] lg:text-[18px] ">This is an orientation and stabilization phase for clients starting care at Meaningful Minds. Clients receive education and information regarding symptoms, effects, and treatment of mental illness, medications, substance abuse, co-dependency and its effect on substance abuse treatment, the implementation of self-care. Services provide individual and group substance abuse counseling, education on the health consequences of substance abuse and dependence, and relapse prevention. </p>
+                  <p class="text-gray-500 pb-5 text-[15px]  md:text-[15px] lg:text-[18px]">This is an orientation and stabilization phase for clients starting care at Meaningful Minds. Clients receive education and information regarding symptoms, effects, and treatment of mental illness, medications, substance abuse, co-dependency and its effect on substance abuse treatment, the implementation of self-care. Services provide individual and group substance abuse counseling, education on the health consequences of substance abuse and dependence, and relapse prevention. </p>
                 </div>
                 <div class="feature-item-img">
                     <img class="w-[500px] rounded-[20px]" src="{% static 'images/18557.jpg' %}" alt="">
