--- a/Onboarding/templates/index.html
+++ b/Onboarding/templates/index.html
@@ -4,7 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meaningful Mind Therapy Services</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'images/apple-touch-icon.png' %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'images/favicon-32x32.png' %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'images/favicon-16x16.png' %}">
+    <link rel="manifest" href="{% static 'images/site.webmanifest' %}">
+    <title>Meaningful Mind Therapeutic Services</title>
     <link rel="stylesheet" href="{% static 'css/styles.css' %}?v=8">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
@@ -138,7 +142,7 @@
             <div class="about mx-auto container flex lg:flex-row flex-col md:justify-center lg:justify-evenly  p-5 lg:p-2 xl:p-20">
                 <div class="about-1 p-5" data-aos="fade-up"  data-aos-once="true">
                     <h1 class="text-red-500 text-xl  pb-3 font-extrabold ">Welcome!</h1>
-                    <P class="text-gray-950 text-left  text-2xl lg:text-2xl xl:text-3xl font-sans w-[100%] xl:w-[550px] lg:w-[450px] font-bold uppercase" style="letter-spacing: .1rem; word-spacing: .1rem;" >Even the strongest people need a little bit of help to work through some of 
+                    <P class="text-gray-950 text-left  text-xl sm:text-2xl lg:text-2xl xl:text-3xl font-sans w-[100%] xl:w-[550px] lg:w-[450px] font-bold uppercase" style="letter-spacing: .1rem; word-spacing: .1rem;" >Even the strongest people need a little bit of help to work through some of 
                         life’s most challenging problems. Everyone has hurdles to overcome, and we’d 
                         love to help you along the way.
                         </P>
@@ -212,14 +216,14 @@
     <div class="mx-auto grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 sm:gap-y-20 lg:mx-0 lg:max-w-none lg:grid-cols-2">
       <div class="lg:pr-8 lg:pt-4">
         <div class="lg:max-w-lg">
-          <h2 class="text-base font-semibold leading-7 text-green-600">Affordable Therapy</h2>
-          <p class="mt-2 text-3xl font-bold tracking-tight text-blue-500 sm:text-4xl">Rates & Insurance</p>
-          <p class="mt-6 text-lg leading-8 text-gray-600">
+          <h2 data-aos="fade-up"  data-aos-once="true" class="text-base font-semibold leading-7 text-green-600">Affordable Therapy</h2>
+          <p data-aos="fade-up"  data-aos-once="true" class="mt-2 text-3xl font-bold tracking-tight text-blue-500 sm:text-4xl">Rates & Insurance</p>
+          <p class="mt-6 text-lg leading-8 text-gray-600" data-aos="fade-up"  data-aos-once="true" >
             $_____ per ______ minute session.
             <br>
             <br>
             Depending on your current health insurance provider or employee benefit plan, it is possible for services to be covered in full or in part. Please contact your provider to verify how your plan compensates you for psychotherapy services.</p>
-          <dl class="mt-10 max-w-xl space-y-8 text-base leading-7 text-gray-600 lg:max-w-none">
+          <dl data-aos="fade-up"  data-aos-once="true" class="mt-10 max-w-xl space-y-8 text-base leading-7 text-gray-600 lg:max-w-none">
             <div class="relative">
               <dt class="inline font-semibold text-green-900">
                 Payment. 
@@ -253,7 +257,7 @@
           </dl>
         </div>
       </div>
-      <div class="">
+      <div data-aos="fade-up"  data-aos-once="true" class="">
         <img src="{% static 'images/2148363603.jpg' %}" alt="Product screenshot" class="w-[28rem] max-w-none rounded-xl shadow-xl ring-1 ring-gray-400/10 sm:w-[57rem] md:-ml-4 lg:-ml-0" width="2432" height="1442">
       </div>
     </div>
@@ -264,78 +268,78 @@
       
 <section id="faq" class="">
   <div class="faq container px-10  md:px-10 mx-auto pb-10">
-    <h1 class="text-4xl  text-blue-500 font-bold pb-10">Frequently asked questions</h1>
+    <h1 data-aos="fade-up"  data-aos-once="true" class="text-4xl  text-blue-500 font-bold pb-10">Frequently asked questions</h1>
     <div class="faq-items mx-auto container ">
-      <div class="faq-item  mx-auto container ">
+      <div data-aos="fade-up"  data-aos-once="true"  class="faq-item  mx-auto container ">
         <div class="faq-text py-3" style=" border-top: 1px solid lightgreen;">
-          <h1 class="text-[18px] md:text-[20px] text flex items-center align-middle justify-between text-blue-400 font-bold pb-1">Aren’t people who go to therapy weak?
+          <h1  class="text-[15px] md:text-[20px] text flex items-center align-middle justify-between text-blue-400 font-bold pb-1">Aren’t people who go to therapy weak?
             <div class="faq-symbol text-2xl font-bold text-blue-500 cursor-pointer">
               &plus;
             </div>
           </h1>
-          <p class="text-gray-500  md:text-[18px] text-[15px]">Not at all. People who ask for help know when they need it and have the courage to reach out. Everyone needs help now and then. In our work together, I’ll help you explore and identify your strengths and how to implement them to reduce the influence of the problems you are facing.
+          <p class="text-gray-500  md:text-[18px] text-[13px]">Not at all. People who ask for help know when they need it and have the courage to reach out. Everyone needs help now and then. In our work together, I’ll help you explore and identify your strengths and how to implement them to reduce the influence of the problems you are facing.
 
           </p>
           
         </div>
         
       </div>
-      <div class="faq-item mx-auto container ">
+      <div data-aos="fade-up"  data-aos-once="true"  class="faq-item mx-auto container ">
         
         <div class="faq-text py-3" style=" border-top: 1px solid lightgreen;">
-          <h1 class="text-[18px] md:text-[20px] text flex items-center align-middle justify-between text-blue-400 font-bold pb-1">What’s the difference between talking to you or my best friend or family?
+          <h1  class="text-[15px] md:text-[20px] text flex items-center align-middle justify-between text-blue-400 font-bold pb-1">What’s the difference between talking to you or my best friend or family?
             <div class="faq-symbol text-2xl font-bold text-blue-500 cursor-pointer">
               <h3 class="cursor-pointer">&plus;</h3>
           </div>
           </h1>
-          <p class="text-gray-500 md:text-[18px] text-[15px]">The difference is between someone who can do something, and someone who has the training and experience to do that same thing professionally. A mental health professional can help you approach your situation in a new way– teach you new skills, gain different perspectives, listen to you without judgment or expectations, and help you listen to yourself. Furthermore, counseling is completely confidential. You won’t have to worry about others “knowing my business.” Lastly, if your situation provokes a great deal of negative emotion, and you’ve been confiding in a friend or family member, there is the risk that once you are feeling better you could start avoiding that person so you aren’t reminded of this difficult time in your life.
+          <p  class="text-gray-500 md:text-[18px] text-[13px]">The difference is between someone who can do something, and someone who has the training and experience to do that same thing professionally. A mental health professional can help you approach your situation in a new way– teach you new skills, gain different perspectives, listen to you without judgment or expectations, and help you listen to yourself. Furthermore, counseling is completely confidential. You won’t have to worry about others “knowing my business.” Lastly, if your situation provokes a great deal of negative emotion, and you’ve been confiding in a friend or family member, there is the risk that once you are feeling better you could start avoiding that person so you aren’t reminded of this difficult time in your life.
 
           </p>
           
         </div>
         
       </div>
-      <div class="faq-item mx-auto container ">
+      <div class="faq-item  mx-auto container " data-aos="fade-up"  data-aos-once="true" >
      
         <div class="faq-text py-3" style=" border-top: 1px solid lightgreen;">
-          <h1 class="text-[18px] md:text-[20px] text flex items-center align-middle justify-between text-blue-400 font-bold pb-1">Why shouldn’t I just take medication?
+          <h1  class="text-[15px] md:text-[20px]text flex items-center align-middle justify-between text-blue-400 font-bold pb-1">Why shouldn’t I just take medication?
             <div class="faq-symbol text-2xl font-bold text-blue-500 cursor-pointer">
               <h3 class="cursor-pointer">&plus;</h3>
           </div>
           </h1>
-          <p class="text-gray-500  md:text-[18px] text-[15px]">
+          <p class="text-gray-500  md:text-[18px] text-[13px]">
             Medication can be effective but it alone cannot solve all issues. Sometimes medication is needed in conjunction with counseling. Our work together is designed to explore and unpack the problems you are experiencing and expand on your strengths that can help you accomplish your personal goals.
           </p>
           
         </div>
         
       </div>
-      <div class="faq-item mx-auto container ">
+      <div data-aos="fade-up"  data-aos-once="true" class="faq-item mx-auto container ">
        
         <div class="faq-text py-3" style=" border-top: 1px solid lightgreen;">
-          <h1 class="text-[18px] md:text-[20px] text flex items-center align-middle justify-between text-blue-400 font-bold pb-1">
+          <h1 class="text-[15px] md:text-[20px] text flex items-center align-middle justify-between text-blue-400 font-bold pb-1">
             How does it work? What do I have to do in sessions?
             <div class="faq-symbol text-2xl font-bold text-blue-500 cursor-pointer">
               <h3 class="cursor-pointer">&plus;</h3>
           </div>
           </h1>
-          <p class="text-gray-500  md:text-[18px] text-[15px]">
+          <p class="text-gray-500  md:text-[18px] text-[13px]">
             Because each person has different issues and goals for counseling, it will be different depending on the individual. I tailor my therapeutic approach to your specific needs.
           </p>
           
         </div>
         
       </div>
-      <div class="faq-item mx-auto container ">
+      <div data-aos="fade-up"  data-aos-once="true" class="faq-item mx-auto container ">
         
         <div class="faq-text py-3" style=" border-top: 1px solid lightgreen;">
-          <h1 class="text-[18px] md:text-[20px] text flex items-center align-middle justify-between text-blue-400 font-bold pb-1">
+          <h1 class="text-[15px] md:text-[20px] text flex items-center align-middle justify-between text-blue-400 font-bold pb-1">
             How long will it take?
             <div class="faq-symbol text-2xl font-bold text-blue-500 cursor-pointer">
               <h3 class="cursor-pointer">&plus;</h3>
           </div>
           </h1>
-          <p class="text-gray-500 md:text-[18px] text-[15px]">
+          <p class="text-gray-500 md:text-[18px] text-[13px]">
             Unfortunately, this is not possible to say in a general FAQs page. Everyone’s circumstances are unique to them and the length of time counseling can take to allow you to accomplish your goals depends on your desire for personal development, your commitment, and the factors that are driving you to seek counseling in the first place.
 
           </p>
@@ -343,16 +347,16 @@
         </div>
         
       </div>
-      <div class="faq-item mx-auto container ">
+      <div data-aos="fade-up"  data-aos-once="true" class="faq-item mx-auto container ">
 
         <div class="faq-text py-3" style=" border-top: 1px solid lightgreen;">
-          <h1 class="text-[18px] md:text-[20px] text flex items-center align-middle justify-between text-blue-400 font-bold pb-1">
+          <h1 class="text-[15px] md:text-[20px] text flex items-center align-middle justify-between text-blue-400 font-bold pb-1">
             I want to get the most out of therapy. What can I do to help?
             <div class="faq-symbol text-2xl font-bold text-blue-500 cursor-pointer">
               <h3 class="cursor-pointer">&plus;</h3>
           </div>
           </h1>
-          <p class="text-gray-500  md:text-[18px] text-[15px]">
+          <p class="text-gray-500  md:text-[18px] text-[13px]">
             I am so glad you are dedicated to getting the most out of your sessions. Your active participation and dedication will be crucial to your success.
 
           </p>
